--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "node": "14.18.2"
   },
   "scripts": {
-    "start": "npx electron-forge start",
+    "start": "npx electron-build-env electron-forge start",
     "package": "electron-forge package",
+    "re-build": "npx electron-build-env electron-rebuild -f",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
     "lint": "echo \"No linting configured\""
@@ -34,8 +35,7 @@
             "name": "my_new_app"
           },
           "platforms": [
-            "darwin",
-            "linux"
+            "darwin"
           ]
         },
         {
@@ -77,7 +77,8 @@
     "@electron-forge/plugin-webpack": "^6.0.0-beta.61",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
     "css-loader": "^6.5.1",
-    "electron": "16.0.5",
+    "electron": "12.0.9",
+    "electron-build-env": "^0.2.0",
     "node-loader": "^2.0.0",
     "style-loader": "^3.3.1"
   },
@@ -85,6 +86,6 @@
     "@tensorflow/tfjs": "^3.12.0",
     "electron-rebuild": "^3.2.5",
     "electron-squirrel-startup": "^1.0.0",
-    "tokenizers": "0.8.0"
+    "tokenizers": "file:./tokenizers/"
   }
 }
